# dbt_cloud_demo

./: .gitignore  Makefile  README.md  dagster_cloud.yaml  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: branch_deployments.yml  deploy.yml
dbt_cloud_demo/: pyproject.toml  setup.py
dbt_cloud_demo/dbt_cloud_demo/: assets.py  constants.py  definitions.py  schedules.py
models/example/: my_first_dbt_model.sql  my_first_python_model.py
